--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "mongodb": "^6.8.1",
     "mongoose": "^8.6.1",
     "next": "14.2.9",
+    "nodemailer": "^6.9.15",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sib-api-v3-typescript": "^2.2.2"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.16",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
